--- a/src/global.css
+++ b/src/global.css
@@ -6,7 +6,7 @@ html {
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   touch-action: manipulation;
-  background-color: #cbd5e0;
+  background-color: gray;
 }
 body {
   position: relative;
